implemented json delete

--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -2,19 +2,18 @@
   <% @notes.each do |note| %>
     <div class="well" id="note-<%= note.id %>">
       <%= note.id %>
-      <%= note.title %>
-      <%= note.description %>
+      <div class="title">
+        <%= note.title %>
+      </div>
       <form action="/notes/<%= note.id %>" method="POST">
         <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
         <input type="hidden" name="_method" value="PATCH">
-        <textarea name="description" cols="30" rows="10" readonly><%= note.description %></textarea>
+        <textarea name="description" cols="30" rows="10" readonly class="description"><%= note.description %></textarea>
         <input type="submit" value="Edit" class="submit">
       </form>
-      <form action="/notes/<%= note.id %>" method="POST">
-        <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-        <input type="hidden" name="_method" value="DELETE">
+      <%= form_tag "/notes/#{note.id}", method: :DELETE, remote: true do%>
         <input type="submit" value="Delete">
-      </form>
+      <% end %>
     </div>
   <% end %>
 </div>
